# p3-playground

./: .gitignore  Cargo.toml  READMD.md  README.md
.github/workflows/: ci.yaml
air-ext/: Cargo.toml
air-ext/src/: check_constraints.rs  input.rs  interaction_air_builder.rs  interaction_builder.rs  lib.rs  sub_air_builder.rs  symbolic_builder.rs  symbolic_expression.rs
fri-ext/: Cargo.toml
fri-ext/src/: config.rs  lib.rs  proof.rs  prover.rs  two_adic_pcs.rs  two_adic_pcs_shared_cap.rs  verifier.rs
fri-ext/tests/: fri.rs  pcs.rs
hyperplonk/: Cargo.toml
hyperplonk/benches/: air.rs  fractional_sum.rs  koala_bear_poseidon2.rs
hyperplonk/examples/: koala_bear_poseidon2.rs
hyperplonk/src/: config.rs  folder.rs  interaction.rs  keygen.rs  lib.rs  proof.rs  prover.rs  util.rs  verifier.rs
hyperplonk/src/sumcheck/: eval.rs  mod.rs
hyperplonk/src/sumcheck/air/: mod.rs  regular.rs  univariate_skip.rs
hyperplonk/src/sumcheck/fractional_sum/: mod.rs  regular.rs
hyperplonk/tests/: interaction_air.rs  simple_air.rs  util.rs
ml-pcs/: Cargo.toml
ml-pcs/src/: lib.rs  ml_pcs.rs  util.rs
poseidon2-util/: Cargo.toml
poseidon2-util/src/: air.rs  lib.rs
poseidon2-util/src/air/: generation.rs
poseidon2-util/src/instantiation/: horizon.rs
poseidon2-util/src/instantiation/horizon/: baby_bear.rs  koala_bear.rs
poseidon2-util/src/instantiation/horizon/baby_bear/: constant.rs
poseidon2-util/src/instantiation/horizon/koala_bear/: constant.rs
uni-stark-ext/: Cargo.toml
uni-stark-ext/src/: air.rs  check_constraints.rs  config.rs  folder.rs  interaction.rs  interaction_air_builder.rs  keygen.rs  lib.rs  proof.rs  prover.rs  rap.rs  symbolic_builder.rs  symbolic_expression.rs  verifier.rs
uni-stark-ext/src/keygen/: air_builder.rs  builder.rs  mod.rs  multi_builder.rs  prep.rs  trace_width.rs  types.rs  verifying_params.rs
uni-stark-ext/tests/: fib_air.rs  interaction_air.rs  mul_air.rs
whir/: Cargo.toml
whir/src/: lib.rs  pcs.rs
whir/tests/: pcs.rs
