[workspace]
members = ["air-ext", "fri-ext", "hyperplonk", "ml-pcs", "uni-stark-ext", "whir"]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
criterion = "0.5.1"
hashbrown = { version = "0.15", default-features = false }
itertools = "0.14.0"
postcard = "1.1.1"
rand = "0.9.0"
serde = "1.0.218"
tracing = "0.1.41"
tracing-forest = "0.1.6"
tracing-subscriber = { version = "0.3.17", default-features = false, features = ["alloc"] }
whir-p3 = { git = "http://github.com/tcoratger/whir-p3", rev = "050705f" }

p3-air = { git = "https://github.com/Plonky3/Plonky3" }
p3-baby-bear = { git = "https://github.com/Plonky3/Plonky3" }
p3-blake3 = { git = "https://github.com/Plonky3/Plonky3" }
# p3-blake3-air = { git = "https://github.com/Plonky3/Plonky3" }
# p3-bn254-fr = { git = "https://github.com/Plonky3/Plonky3" }
p3-challenger = { git = "https://github.com/Plonky3/Plonky3" }
p3-circle = { git = "https://github.com/Plonky3/Plonky3" }
p3-commit = { git = "https://github.com/Plonky3/Plonky3" }
p3-dft = { git = "https://github.com/Plonky3/Plonky3" }
# p3-examples = { git = "https://github.com/Plonky3/Plonky3" }
p3-field = { git = "https://github.com/Plonky3/Plonky3" }
# p3-field-testing = { git = "https://github.com/Plonky3/Plonky3" }
p3-fri = { git = "https://github.com/Plonky3/Plonky3" }
p3-goldilocks = { git = "https://github.com/Plonky3/Plonky3" }
p3-interpolation = { git = "https://github.com/Plonky3/Plonky3" }
p3-keccak = { git = "https://github.com/Plonky3/Plonky3" }
# p3-keccak-air = { git = "https://github.com/Plonky3/Plonky3" }
p3-koala-bear = { git = "https://github.com/Plonky3/Plonky3" }
p3-matrix = { git = "https://github.com/Plonky3/Plonky3" }
p3-maybe-rayon = { git = "https://github.com/Plonky3/Plonky3" }
p3-mds = { git = "https://github.com/Plonky3/Plonky3" }
p3-merkle-tree = { git = "https://github.com/Plonky3/Plonky3" }
p3-mersenne-31 = { git = "https://github.com/Plonky3/Plonky3" }
p3-monty-31 = { git = "https://github.com/Plonky3/Plonky3" }
# p3-poseidon = { git = "https://github.com/Plonky3/Plonky3" }
p3-poseidon2 = { git = "https://github.com/Plonky3/Plonky3" }
p3-poseidon2-air = { git = "https://github.com/Plonky3/Plonky3" }
# p3-rescue = { git = "https://github.com/Plonky3/Plonky3" }
# p3-sha256 = { git = "https://github.com/Plonky3/Plonky3" }
p3-symmetric = { git = "https://github.com/Plonky3/Plonky3" }
# p3-uni-stark = { git = "https://github.com/Plonky3/Plonky3" }
p3-util = { git = "https://github.com/Plonky3/Plonky3" }

p3-air-ext = { path = "./air-ext" }
p3-fri-ext = { path = "./fri-ext" }
p3-hyperplonk = { path = "./hyperplonk" }
p3-ml-pcs = { path = "./ml-pcs" }
p3-uni-stark-ext = { path = "./uni-stark-ext" }
p3-whir = { path = "./whir" }

[patch."https://github.com/Plonky3/Plonky3"]
p3-air = { git = "https://github.com/Plonky3//Plonky3", rev = "e46b416" }
p3-baby-bear = { git = "https://github.com/Plonky3//Plonky3", rev = "e46b416" }
p3-blake3 = { git = "https://github.com/Plonky3//Plonky3", rev = "e46b416" }
# p3-blake3-air = { git = "https://github.com/Plonky3//Plonky3", rev = "e46b416" }
# p3-bn254-fr = { git = "https://github.com/Plonky3//Plonky3", rev = "e46b416" }
p3-challenger = { git = "https://github.com/Plonky3//Plonky3", rev = "e46b416" }
p3-circle = { git = "https://github.com/Plonky3//Plonky3", rev = "e46b416" }
p3-commit = { git = "https://github.com/Plonky3//Plonky3", rev = "e46b416" }
p3-dft = { git = "https://github.com/Plonky3//Plonky3", rev = "e46b416" }
# p3-examples = { git = "https://github.com/Plonky3//Plonky3", rev = "e46b416" }
p3-field = { git = "https://github.com/Plonky3//Plonky3", rev = "e46b416" }
# p3-field-testing = { git = "https://github.com/Plonky3//Plonky3", rev = "e46b416" }
p3-fri = { git = "https://github.com/Plonky3//Plonky3", rev = "e46b416" }
p3-goldilocks = { git = "https://github.com/Plonky3//Plonky3", rev = "e46b416" }
p3-interpolation = { git = "https://github.com/Plonky3//Plonky3", rev = "e46b416" }
p3-keccak = { git = "https://github.com/Plonky3//Plonky3", rev = "e46b416" }
# p3-keccak-air = { git = "https://github.com/Plonky3//Plonky3", rev = "e46b416" }
p3-koala-bear = { git = "https://github.com/Plonky3//Plonky3", rev = "e46b416" }
p3-matrix = { git = "https://github.com/Plonky3//Plonky3", rev = "e46b416" }
p3-maybe-rayon = { git = "https://github.com/Plonky3//Plonky3", rev = "e46b416" }
p3-mds = { git = "https://github.com/Plonky3//Plonky3", rev = "e46b416" }
p3-merkle-tree = { git = "https://github.com/Plonky3//Plonky3", rev = "e46b416" }
p3-mersenne-31 = { git = "https://github.com/Plonky3//Plonky3", rev = "e46b416" }
p3-monty-31 = { git = "https://github.com/Plonky3//Plonky3", rev = "e46b416" }
# p3-poseidon = { git = "https://github.com/Plonky3//Plonky3", rev = "e46b416" }
p3-poseidon2 = { git = "https://github.com/Plonky3//Plonky3", rev = "e46b416" }
p3-poseidon2-air = { git = "https://github.com/Plonky3//Plonky3", rev = "e46b416" }
# p3-rescue = { git = "https://github.com/Plonky3//Plonky3", rev = "e46b416" }
# p3-sha256 = { git = "https://github.com/Plonky3//Plonky3", rev = "e46b416" }
p3-symmetric = { git = "https://github.com/Plonky3//Plonky3", rev = "e46b416" }
# p3-uni-stark = { git = "https://github.com/Plonky3//Plonky3", rev = "e46b416" }
p3-util = { git = "https://github.com/Plonky3//Plonky3", rev = "e46b416" }
