[package]
name = "p3-air-ext"

edition.workspace = true
version.workspace = true

[dependencies]
hashbrown = { workspace = true, features = ["default-hasher"], optional = true }
itertools.workspace = true
p3-air.workspace = true
p3-field.workspace = true
p3-matrix.workspace = true
tracing = { workspace = true, optional = true }

[features]
check-constraints = ["dep:hashbrown", "dep:tracing"]
