[package]
name = "p3-hyperplonk"

edition.workspace = true
version.workspace = true

[dependencies]
criterion.workspace = true
itertools.workspace = true
p3-air.workspace = true
p3-air-ext.workspace = true
p3-challenger.workspace = true
p3-commit.workspace = true
p3-dft.workspace = true
p3-field.workspace = true
p3-matrix.workspace = true
p3-maybe-rayon.workspace = true
p3-ml-pcs.workspace = true
p3-util.workspace = true
serde = { workspace = true, features = ["derive", "alloc"] }
tracing.workspace = true

[dev-dependencies]
criterion.workspace = true
p3-keccak.workspace = true
p3-koala-bear.workspace = true
p3-poseidon2-air.workspace = true
p3-symmetric.workspace = true
p3-whir = { workspace = true, features = ["parallel"] }
rand.workspace = true
tracing-forest = { workspace = true, features = ["ansi", "smallvec"] }
tracing-subscriber = { workspace = true, features = ["std", "env-filter"] }

[target.'cfg(target_family = "unix")'.dev-dependencies]
tikv-jemallocator = "0.6"

[features]
check-constraints = ["p3-air-ext/check-constraints"]
parallel = ["p3-maybe-rayon/parallel"]

bench = ["parallel"]

[[bench]]
name = "air"

harness = false
required-features = ["bench"]

[[bench]]
name = "fractional_sum"

harness = false
required-features = ["bench"]
