[package]
name = "p3-ml-pcs"

edition.workspace = true
version.workspace = true

[dependencies]
itertools.workspace = true
p3-field.workspace = true
p3-matrix.workspace = true
p3-maybe-rayon.workspace = true
p3-util.workspace = true
serde = { workspace = true, features = ["derive", "alloc"] }
tracing.workspace = true

[features]
parallel = ["p3-maybe-rayon/parallel"]
