[package]
name = "p3-whir"

edition.workspace = true
version.workspace = true

[dependencies]
itertools.workspace = true
p3-challenger.workspace = true
p3-commit.workspace = true
p3-dft.workspace = true
p3-field.workspace = true
p3-matrix.workspace = true
p3-maybe-rayon.workspace = true
p3-merkle-tree.workspace = true
p3-ml-pcs.workspace = true
p3-symmetric.workspace = true
p3-util.workspace = true
serde = { workspace = true, features = ["derive", "alloc"] }
tracing.workspace = true
whir-p3.workspace = true

[dev-dependencies]
p3-keccak.workspace = true
p3-koala-bear.workspace = true
rand.workspace = true

[features]
parallel = ["p3-maybe-rayon/parallel", "whir-p3/parallel"]
